Evaluacion Final Jorge Garces

--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5435/EFJorgeGarces
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+app.testProp= Usuario de prueba
