--- a/user-microservice-dev.properties
+++ b/user-microservice-dev.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
-app.testProp= Usuario de prueba
+app.testProp= Usuario de prueba V1
