--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -5,4 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
-app.testProp=Producto de Prueba V2
+app.testProp=Configuracion de Prueba abfg V1
